Added test for commit

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </header>
         <main></main>
         <footer>
+            <!--bruh-->
             <!-- place footer here -->
         </footer>
         <!-- Bootstrap JavaScript Libraries -->
