--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <body>
         <header>
+            <img src="/imgs/mafiapeg.png">
             <!-- place navbar here -->
         </header>
         <main></main>
